--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "crypto-js": "^4.2.0",
     "dexie": "^4.0.11",
     "pako": "^2.1.0",
     "phaser": "^3.88.2",
+    "uuid": "^11.1.0",
     "vue": "^3.5.13"
   },
   "devDependencies": {
@@ -20,7 +20,7 @@
     "@vue/tsconfig": "^0.7.0",
     "sass": "^1.86.0",
     "typescript": "~5.7.2",
-    "vite": "^6.2.0",
+    "vite": "^5.4.14",
     "vue-tsc": "^2.2.4"
   }
 }
