--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,8 +22,10 @@ jobs:
           node-version: 18
           cache: "pnpm"
 
-      - name: 📦 Install pnpm
-        run: npm install -g pnpm
+      - name: 📦 Setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8
 
       - name: 📥 Install Dependencies
         run: pnpm install
