--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,13 +22,8 @@ jobs:
           node-version: 18
           cache: "pnpm"
 
-      - name: 📦 Setup pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: 8
-
-      - name: 🛠 Add pnpm to PATH
-        run: echo "$(pnpm bin)" >> $GITHUB_PATH
+      - name: 🔧 Enable Corepack (pnpm)
+        run: corepack enable
 
       - name: 📥 Install Dependencies
         run: pnpm install
