--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,14 +16,16 @@ jobs:
       - name: 🛎 Checkout Repository
         uses: actions/checkout@v3
 
+      - name: 🔧 Setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8.6.0
+
       - name: 🟢 Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 18
           cache: "pnpm"
-
-      - name: 🔧 Enable corepack
-        run: corepack enable
 
       - name: 📥 Install Dependencies
         run: pnpm install
