--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
       - name: 🔧 Setup pnpm
         uses: pnpm/action-setup@v2
         with:
-          version: 8.6.0
+          version: 7.33.7
 
       - name: 🟢 Setup Node.js
         uses: actions/setup-node@v3
@@ -28,7 +28,7 @@ jobs:
           cache: "pnpm"
 
       - name: 📥 Install Dependencies
-        run: pnpm install
+        run: pnpm install --no-frozen-lockfile
 
       - name: 🔨 Build Project
         run: pnpm run build
