--- a/package.json
+++ b/package.json
@@ -9,17 +9,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueuse/core": "^13.0.0",
     "dexie": "^4.0.11",
     "pako": "^2.1.0",
     "phaser": "^3.88.2",
     "uuid": "^11.1.0",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
     "sass": "^1.86.0",
     "typescript": "~5.7.2",
+    "unplugin-auto-import": "^19.1.1",
+    "unplugin-vue-components": "^28.4.1",
     "vite": "^5.4.14",
     "vue-tsc": "^2.2.4"
   }
