--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^13.0.0",
+    "crypto-js": "^4.2.0",
     "dexie": "^4.0.11",
     "pako": "^2.1.0",
     "phaser": "^3.88.2",
